  firing a caret or scroll event.

- Stricter checks for windows being out-of-bounds.

- Divider position in Global Options dialog box is now saved.

- Saving a file within jEdit will refresh the directory search file list
  if necessary.

- Minor improvement to Python auto indent (Oliver Rutherfurd).

- Documentation updates (me and Kris Kopicki).

+ Bug Fixes:

- The Format Paragraph command was once again broken on Java 1.3.

- Installer's "auto" mode works now. The command line syntax has
  changed:

  java installer.Install auto <install directory>
    unix-script=<bin directory> unix-man=<man directory>

  The last two parameters are optional.

- EOL_SPAN_REGEXP rule was broken (Oliver Rutherfurd).

- Undoing all changes up to a save would not delete the autosave file,
  even though the buffer was no longer marked as "dirty".

- Fixed minor problem with expanding files when moving the caret outside
  the narrowed range.

- Fixed digit highlighting regexp since it didn't pick up 0xff00 (and
  various other combinations) properly.

- Installer didn't work on OS/2.

- "Toggle Line Separator" command now sets buffer dirty status.

- Splitting the view more than once could break.

- Fixed a NullPointerException when doing a "Replace All" over a
  directory right after a HyperSearch in the same directory, then
  closing some of the buffers touched by the "Replace All".

- Fixed display of docking buttons on Mac OS X (Kris Kopicki).

- Dialog boxes shown by search and replace are now parented by a
  search dialog, if one is open.

- Fixed yet another bug when editing the same buffer in two splits,
  this time if the second split was narrowed.

* Version 4.1pre9

Thanks to Chris Petersen, Iain Hewson, Kris Kopicki, Randolf Mock and
Reinout van Schouwen for contributing to this release.

+ Syntax Highlighting Changes:

- Added gettext mode (primarily used on Unix for translating programs
  to other languages) (Reinout van Schouwen).

- Added APDL mode (Randolf Mock).
