@@ -5,7 +5,7 @@
 <!-- :indentSize=1:noTabs=yes:maxLineLen=72:tabSize=2:        -->
 <!--                                                          -->
 <!-- This file covers the chapter "Macro tips and techniques" -->
-<!-- $Id: macro-tips.xml,v 1.12 2003/02/03 02:07:59 spestov Exp $
+<!-- $Id: macro-tips.xml,v 1.13 2003/02/08 20:13:26 spestov Exp $
  -->
 
 <chapter id="macro-tips"><title>Macro Tips and Techniques</title>
@@ -940,7 +940,7 @@ bottom</screen>
   </para>
 
     <informalexample><programlisting>Log.log(Log.DEBUG, BeanShell.class,
-    "counter = " + String.valueOf(counter));</programlisting></informalexample>
+    "counter = " + counter);</programlisting></informalexample>
 
   <para>
     The corresponding activity log entry might read as follows:
